Closed Bug 788430 Opened 12 years ago Closed 12 years ago

Minor bug in error handling of MozillaMaintenance Service

Categories

(Toolkit :: Application Update, defect)

Other
Other
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: gliuwr, Assigned: gliuwr)

Details

(Keywords: crash)

Attachments

(1 file)

there are minor bug in `workmonitor.cpp`,
that can crash the `maintenanceservice.exe`.
just try run `sc start MozillaMaintenance null software-update test` in your cmd,
then you can see there is a Application Error in Event Viewer.
Keywords: crash
Attachment #658410 - Flags: review?(dietrich)
Component: Installer → Application Update
Product: Firefox → Toolkit
Rob, Dave, who can look at this patch?
Attachment #658410 - Flags: review?(dietrich)
I think ehsan or bbondy have some experience here
look here,
"We can only update update.status if argv[1] exists. " was written in comments.
hope this can help you to review.
blocking-basecamp: --- → ?
blocking-basecamp: ? → ---
Comment on attachment 658410 [details] [diff] [review]
workmonitor.patch

Review of attachment 658410 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, thanks for the patch!
Attachment #658410 - Flags: review?(netzen) → review+
Summary: the minor bug in workmonitor.cpp → Minor bug in error handling of Mozilla MaintenanceService
Summary: Minor bug in error handling of Mozilla MaintenanceService → Minor bug in error handling of MozillaMaintenance Service
Assignee: nobody → gliuwr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
https://hg.mozilla.org/integration/mozilla-inbound/rev/f7810fee7ee9

Thanks for the patch! One request - to make life easier for those checking in your behalf, please make sure that your future patches include the necessary metadata needed for checkin. Thanks again!
https://developer.mozilla.org/en-US/docs/Creating_a_patch_that_can_be_checked_in
Flags: in-testsuite-
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/f7810fee7ee9
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: