Bug 788430 - Fix a minor bug in the MozillaMaintenanceService error handling. r=bbondy